force-app/main/default/objects/Approval_Matrix__c/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <description>indirectly related to Account.Account_Segment__c</description>
    <label>Account Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Coverage 1</fullName>
            </value>
            <value>
                <fullName>Coverage 2</fullName>
            </value>
            <value>
                <fullName>Coverage 3</fullName>
            </value>
            <value>
                <fullName>Coverage 4</fullName>
            </value>
            <value>
                <fullName>Enterprise Canada</fullName>
                <isActive>false</isActive>
                <label>Enterprise Canada</label>
            </value>
            <value>
                <fullName>Enterprise East</fullName>
            </value>
            <value>
                <fullName>Enterprise West</fullName>
            </value>
            <value>
                <fullName>Generalist</fullName>
            </value>
            <value>
                <fullName>Global Industries</fullName>
                <label>GISV</label>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>National - Canada</fullName>
            </value>
            <value>
                <fullName>Public Sector – Canada</fullName>
                <label>Public Sector Canada</label>
            </value>
            <value>
                <fullName>Territory - East</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>USGS</fullName>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
            <value>
                <fullName>Vertical - Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>