force-app/main/default/objects/Approval_Matrix__c/fields/Account_SubSegment__c.field-meta.xml
<CustomField>
    <fullName>Account_SubSegment__c</fullName>
    <label>Account SubSegment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC-ANZ</fullName>
            </value>
            <value>
                <fullName>APAC-SEA</fullName>
            </value>
            <value>
                <fullName>BFS</fullName>
            </value>
            <value>
                <fullName>Canadian Healthcare</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Enterprise Canada</fullName>
            </value>
            <value>
                <fullName>Federal Canada</fullName>
            </value>
            <value>
                <fullName>Federal-US</fullName>
            </value>
            <value>
                <fullName>Financial Service Canada</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Government - Canada</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Healthcare/ Life Sciences - Canada</fullName>
            </value>
            <value>
                <fullName>HLS</fullName>
            </value>
            <value>
                <fullName>INS</fullName>
            </value>
            <value>
                <fullName>IPB</fullName>
            </value>
            <value>
                <fullName>IPRO</fullName>
            </value>
            <value>
                <fullName>IPS</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>Municipal Canada</fullName>
            </value>
            <value>
                <fullName>National Accounts - Canada</fullName>
            </value>
            <value>
                <fullName>National Accounts - East</fullName>
            </value>
            <value>
                <fullName>National Accounts - West</fullName>
            </value>
            <value>
                <fullName>National West</fullName>
            </value>
            <value>
                <fullName>Oil and Gas Canada</fullName>
            </value>
            <value>
                <fullName>Provincial Canada</fullName>
            </value>
            <value>
                <fullName>SLED</fullName>
            </value>
            <value>
                <fullName>TES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>