force-app/main/default/objects/Approval_Matrix__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>#36451 - Creating this field to use in flows to fetch records with Deal Review Business Unit</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>RIM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>