force-app/main/default/objects/Approval_Matrix__c/fields/L3_ALM_Commercial_Approver__c.field-meta.xml
<CustomField>
    <fullName>L3_ALM_Commercial_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L3 ALM Commercial Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Matrix_l3almcomm</relationshipName>
    <type>Lookup</type>
</CustomField>