force-app/main/default/objects/Approval_Matrix__c/fields/L3_EVP__c.field-meta.xml
<CustomField>
    <fullName>L3_EVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L3 EVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Matrix6</relationshipName>
    <type>Lookup</type>
</CustomField>