force-app/main/default/objects/Approval_Matrix__c/fields/Level_1_Approver_Backup__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Approver_Backup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 1 Approver Backup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Matrix1</relationshipName>
    <type>Lookup</type>
</CustomField>