force-app/main/default/objects/Approval_Matrix__c/fields/Level_2_Commercial_Approver_Backup__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Commercial_Approver_Backup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 2 Commercial Approver Backup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Matrix4</relationshipName>
    <type>Lookup</type>
</CustomField>