force-app/main/default/objects/Approval_Matrix__c/fields/Level_2_Finance_Approver__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Finance_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 2 Finance Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Matrix2</relationshipName>
    <type>Lookup</type>
</CustomField>