force-app/main/default/objects/Approval_Matrix__c/fields/Primary_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product_Line__c</fullName>
    <label>Primary Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Data Centers</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Digital Solutions</fullName>
            </value>
            <value>
                <fullName>DM (All other service lines)</fullName>
            </value>
            <value>
                <fullName>DM Cloud Solutions</fullName>
            </value>
            <value>
                <fullName>DM SITAD</fullName>
            </value>
            <value>
                <fullName>DM Tape Vaulting</fullName>
            </value>
            <value>
                <fullName>Entertainment Services</fullName>
            </value>
            <value>
                <fullName>Fixed Asset Management</fullName>
            </value>
            <value>
                <fullName>Information Governance</fullName>
            </value>
            <value>
                <fullName>Insight</fullName>
                <label>InSight</label>
            </value>
            <value>
                <fullName>ITRenew Contracted Sales Only</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Records Management</fullName>
            </value>
            <value>
                <fullName>RM (All other service lines)</fullName>
            </value>
            <value>
                <fullName>RM Secure Storage</fullName>
            </value>
            <value>
                <fullName>Scan</fullName>
            </value>
            <value>
                <fullName>Secure Shredding</fullName>
            </value>
            <value>
                <fullName>Shred</fullName>
            </value>
            <value>
                <fullName>Sierra26</fullName>
            </value>
            <value>
                <fullName>SMB Packages</fullName>
            </value>
            <value>
                <fullName>Special Projects - Data Management</fullName>
            </value>
            <value>
                <fullName>Special Projects - International</fullName>
            </value>
            <value>
                <fullName>Special Projects - Records Management &amp; Shred</fullName>
            </value>
            <value>
                <fullName>SBS Pallet Storage</fullName>
                <label>W&amp;L Pallet Storage</label>
            </value>
            <value>
                <fullName>Warehouse and Logistics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>