force-app/main/default/objects/Approval_Matrix__c/validationRules/Level_1_approver_is_present_and_active.validationRule-meta.xml
<ValidationRule>
    <fullName>Level_1_approver_is_present_and_active</fullName>
    <active>true</active>
    <errorConditionFormula>OR(

	AND(
	  ISPICKVAL(Deal_Level__c , &quot;1&quot;),
	 ISBLANK( Level_1_Approver__c ) 
	),

	NOT( Level_1_Approver__r.IsActive ),
	

 	AND(
	  ISPICKVAL(Deal_Level__c , &quot;1&quot;),
	 ISBLANK( Level_1_Approver_Backup__c ) 
	),

	NOT( Level_1_Approver_Backup__r.IsActive )

 
 
 )</errorConditionFormula>
    <errorDisplayField>Account_Segment__c</errorDisplayField>
    <errorMessage>Please specify an Active User for all Deal Level 1 approvers</errorMessage>
</ValidationRule>