force-app/main/default/objects/Approval_Matrix__c/validationRules/Only_Allow_Segment_OR_Subsegment.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Allow_Segment_OR_Subsegment</fullName>
    <active>true</active>
    <description>Each record can only have a value for Segment OR Subsegment</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Deal_Level__c , &quot;3&quot;)),
OR(

AND(
ISBLANK(TEXT(Account_Segment__c)),
ISBLANK(TEXT(Account_SubSegment__c)),
ISBLANK(TEXT(Primary_Product_Line__c)),
ISBLANK(TEXT(Billing_Country__c))
),

AND(
NOT(ISBLANK(TEXT(Account_Segment__c))),
NOT(ISBLANK(TEXT(Account_SubSegment__c))),
NOT(ISBLANK(TEXT(Primary_Product_Line__c))),
NOT(ISBLANK(TEXT(Billing_Country__c)))
),

AND(
NOT(ISBLANK(TEXT(Account_Segment__c))),
NOT(ISBLANK(TEXT(Account_SubSegment__c)))
),

AND(
NOT(ISBLANK(TEXT(Primary_Product_Line__c))),
OR(
NOT(ISBLANK(TEXT(Account_Segment__c))),
NOT(ISBLANK(TEXT(Account_SubSegment__c))),
NOT(ISBLANK(TEXT(Billing_Country__c)))
)
),

AND(
NOT(ISBLANK(TEXT(Billing_Country__c))),
OR(
NOT(ISBLANK(TEXT(Account_Segment__c))),
NOT(ISBLANK(TEXT(Account_SubSegment__c))),
NOT(ISBLANK(TEXT(Primary_Product_Line__c)))
)
)

)
)</errorConditionFormula>
    <errorMessage>Please specify a value for Primary Product Line or Billing Country or Account Segment and/or Account SubSegment. All 4 fields cannot be populated at once.</errorMessage>
</ValidationRule>