force-app/main/default/objects/Approval_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Region__c</columns>
    <columns>Billing_Country__c</columns>
    <columns>Primary_Product_Line__c</columns>
    <columns>Account_Segment__c</columns>
    <columns>Account_SubSegment__c</columns>
    <columns>Deal_Level__c</columns>
    <columns>Level_1_Approver__c</columns>
    <columns>Level_1_Approver_Backup__c</columns>
    <columns>Level_2_Finance_Approver__c</columns>
    <columns>Level_2_Finance_Approver_Backup__c</columns>
    <columns>Level_2_Commercial_Approver__c</columns>
    <columns>Level_2_Commercial_Approver_Backup__c</columns>
    <columns>L3_CFO__c</columns>
    <columns>L3_Global_Digital_Product_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>