force-app/main/default/objects/Approval_Matrix__c/listViews/Latin_America.listView-meta.xml
<ListView>
    <fullName>Latin_America</fullName>
    <columns>NAME</columns>
    <columns>Billing_Country__c</columns>
    <columns>Deal_Level__c</columns>
    <columns>Sales_Region__c</columns>
    <columns>Level_1_Approver__c</columns>
    <columns>Level_1_Approver_Backup__c</columns>
    <columns>Level_2_Finance_Approver__c</columns>
    <columns>Level_2_Finance_Approver_Backup__c</columns>
    <columns>Level_2_Commercial_Approver__c</columns>
    <columns>Level_2_Commercial_Approver_Backup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Latin America</value>
    </filters>
    <label>Latin America</label>
</ListView>