force-app/main/default/objects/Approval_Matrix__c/listViews/NA.listView-meta.xml
<ListView>
    <fullName>NA</fullName>
    <columns>NAME</columns>
    <columns>Sales_Region__c</columns>
    <columns>Account_SubSegment__c</columns>
    <columns>Account_Segment__c</columns>
    <columns>Deal_Level__c</columns>
    <columns>Level_1_Approver__c</columns>
    <columns>Level_2_Commercial_Approver__c</columns>
    <columns>Level_2_Finance_Approver__c</columns>
    <columns>L3_CFO__c</columns>
    <columns>L3_EVP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>North_America</value>
    </filters>
    <label>North America</label>
</ListView>